<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/relLayMain"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="group27.mad.com.triviaapp.MainActivity">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/tvHeading"
    android:text="@string/welcome_to_trivia_app"
    android:textSize="23sp"
    android:textAlignment="center"
    android:textColor="@android:color/black"
    android:textStyle="bold"
    />
    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/pbarMain"
        android:layout_below="@+id/tvHeading"
        android:indeterminate="true"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvTriviaReady"
        android:text="@string/trivia_downloading"
        android:layout_below="@+id/pbarMain"
        android:textAlignment="center"
        android:textSize="23sp"
        android:textColor="@android:color/black"
        />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnExit"
            android:text="@string/exit"
            android:textSize="17sp"
            android:layout_alignParentBottom="true"
            android:onClick="quit"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnStartTrivia"
            android:text="@string/start_trivia"
            android:textSize="17sp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:onClick="startTriviaAction"
            />
</RelativeLayout>
