<?xml version="1.0" encoding="utf-8"?>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/relLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/q1"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            android:background="@android:color/holo_blue_light"/>

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_toStartOf="@+id/tv3"
            android:text="@string/time_left"
            android:textColor="@android:color/black"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/_0_seconds"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            android:background="@android:color/holo_blue_light"/>

        <ImageView
            android:id="@+id/imgView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/tv1"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:scaleType="fitCenter" />

        <ProgressBar
            android:id="@+id/pbarImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/tv1"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/tvQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgView"
            android:textColor="@android:color/black"
            android:textSize="17sp" />



        <Button
            android:id="@+id/btnQuit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/quit"
            android:textSize="17sp"
            android:onClick="quitFromQuiz"/>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:onClick="nextAction"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/next"
            android:textSize="17sp" />
    </RelativeLayout>
